--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "tsc && node dist/src/index.js",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
@@ -25,6 +27,5 @@
     "jest-each": "^30.0.0-beta.3",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.4"
-  },
-  "type": "module"
+  }
 }
